Alignment fixed in product pages
Alignment fixed in product pages

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1374,7 +1374,7 @@ body {font-family: Verdana, sans-serif; margin:0}
 
 .glass_section .container .glass_container #product1{
   height: auto;
-  width: auto;
+  width: 100%;
 }
 
 /*Product-1 Image Slider*/
