--- a/css/style.css
+++ b/css/style.css
@@ -1374,7 +1374,7 @@ body {
   
   .glass_section .container .glass_container #product1{
     height: auto;
-    width: auto;
+    width: 100%;
   }
   
   /*Product-1 Image Slider*/
